--- a/style.css
+++ b/style.css
@@ -12,8 +12,9 @@ header {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  padding-top: 2rem;
+  padding-top: 0.5rem;
   margin: auto;
+  backdrop-filter: brightness(0.5);
   align-items: center;
   z-index: 4;
   padding-inline: 5%;
@@ -21,7 +22,7 @@ header {
 }
 
 .logo {
-   filter: brightness(1%);
+  filter: brightness(1);
   width: 30vw;
 }
 
