--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ header {
   justify-content: space-between;
   padding-top: 0.5rem;
   margin: auto;
-  backdrop-filter: brightness(0.5);
+  background: white;
   align-items: center;
   z-index: 4;
   padding-inline: 5%;
@@ -27,9 +27,12 @@ header {
 }
 
 #btn {
-  padding: 0.1rem 1.8rem 0.1rem 1.8rem;
+  padding: 0.3rem 1.8rem 0.3rem 1.8rem;
   border-radius: 2rem;
-  background: white;
+  color: white;
+  font-weight: 900;
+  background: hsl(322, 100%, 66%);
+  border: 2px solid pink;
   cursor: pointer;
   font-family: "josefin sans";
 }
